--- a/Unique_Ptr_Implementation/Unique_Ptr_Implementation.project
+++ b/Unique_Ptr_Implementation/Unique_Ptr_Implementation.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="Thread_Safe_Stack_LockFree" Version="10.0.0" InternalType="User templates">
+<CodeLite_Project Name="Unique_Ptr_Implementation" Version="10.0.0" InternalType="User templates">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00010001N0005Debug000000000000]]>
@@ -8,6 +8,7 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="my_unique_ptr.hpp"/>
     <File Name="main.cpp"/>
   </VirtualDirectory>
   <Settings Type="Executable">
