Type_Traits, MetaFunctions, Metaprogramming, Local lambda Functions, Higher Order Functions with Lamdas, Constxpression examples, Type Computations using Metaprogramming and STL Type_traits, Aligned Memory Allocation

--- a/Allocator_Stack_Allocator_MemoryPool/Allocator_Stack_Allocator_MemoryPool.project
+++ b/Allocator_Stack_Allocator_MemoryPool/Allocator_Stack_Allocator_MemoryPool.project
@@ -8,6 +8,8 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="Aligned_Allocation.hpp"/>
+    <File Name="StackAllocator.hpp"/>
     <File Name="StackMemoryPool.hpp"/>
     <File Name="MyAlloc.hpp"/>
     <File Name="MyAllocator.hpp"/>
