--- a/lambda_basics/lambda_basics.project
+++ b/lambda_basics/lambda_basics.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="Shared_Unique_Ptrs" Version="10.0.0" InternalType="User templates">
+<CodeLite_Project Name="lambda_basics" Version="10.0.0" InternalType="User templates">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00010001N0005Debug000000000000]]>
@@ -100,6 +100,4 @@
   <VirtualDirectory Name="src">
     <File Name="main.cpp"/>
   </VirtualDirectory>
-  <Dependencies Name="Debug"/>
-  <Dependencies Name="Release"/>
 </CodeLite_Project>
