Added template functions and overloading, basic class examples and io example

--- a/lambda_basics/lambda_basics.project
+++ b/lambda_basics/lambda_basics.project
@@ -10,6 +10,8 @@
   <VirtualDirectory Name="src">
     <File Name="main.cpp"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
   <Settings Type="Executable">
     <GlobalSettings>
       <Compiler Options="-g;-std=c++17;-Wall" C_Options="" Assembler="">
