--- a/test3_extern/test3_extern.project
+++ b/test3_extern/test3_extern.project
@@ -102,4 +102,6 @@
     <File Name="data.hpp"/>
     <File Name="main.cpp"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
 </CodeLite_Project>
