Added Concurrency; Futures, promises. packaged task, threads, mutex, lockguard, uniquelock, I/O, file access, string stream, Metaprogramming for_each_Argument, forNArg(incl  make_unordered_map), templated Stack_withArray..

--- a/Input_Output_File_Acces3/Input_Output_File_Acces3.project
+++ b/Input_Output_File_Acces3/Input_Output_File_Acces3.project
@@ -8,6 +8,7 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="poemCopy.txt"/>
     <File Name="responses.txt"/>
     <File Name="poem.txt"/>
     <File Name="main.cpp"/>
