added macro examples, std::function examples in Templates_Compile_Time_If/main.cpp

--- a/Input_Output_02_FileAccess/Input_Output_02_FileAccess.project
+++ b/Input_Output_02_FileAccess/Input_Output_02_FileAccess.project
@@ -102,4 +102,6 @@
     <File Name="input_file.txt"/>
     <File Name="main.cpp"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
 </CodeLite_Project>
